--- a/index.html
+++ b/index.html
@@ -1,1 +1,256 @@
-Helloworld
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Home</title>
+		<link type="text/css" rel="stylesheet" href="stylesheets/main.css">
+	</head>
+	<body>
+		<script type="text/javascript" rel="script" src="javascripts/jquery-2.1.4.js"></script>
+		<script type="text/javascript" rel="script" src="javascripts/projects_popup.js"></script>
+		<script type="text/javascript" rel="script" src="javascripts/roro.js"></script>
+
+		<!-- Header -->
+		<section id="headerSection" class="pageSection">
+			<link type="text/css" rel="stylesheet" property="stylesheet" href="stylesheets/header.css">
+			<div id="titlePictureDiv">
+				<img class="backgroundImage" id="headerBackgroundImage" srcset="images/BeinnLutharnMhor_Thin.png 10000w, images/BeinnLutharnMhor_Mobile.png 1000w" src="images/BeinnLutharnMhor_Mobile.png"/>
+				<div class="pictureOverlay">
+					<h4 id="hiIm" class="title_text">Hi, I'm</h4>
+					<h4 id="name" class="title_text">Jackson Woodruff</h4>
+					<!-- {% include 'simplifiedProjectsOverlay.html' %} -->
+				</div>
+			</div>
+			<!-- Navigation -->
+			<section id="navigation" class="pageSection">
+				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/navigation.css">
+				<script type="text/javascript" rel="stylesheet" src="javascripts/navigation_handler.js"></script>
+
+				<nav id="home_nav">
+					<ul class="nav_list">
+						<li class="thirds"><a href="" class="large_buttonLink homeButtonLink projectsLink">projects</a></li>
+						<li class="thirds"><a href="" class="large_buttonLink homeButtonLink runningLink">running</a></li>
+						<li class="thirds"><a href="" class="large_buttonLink homeButtonLink aboutLink">me</a></li>
+					</ul>
+				</nav>
+
+			</section>
+		</section> <!-- end header -->
+
+		<main>
+			<section id="projectsSection" class="pageSection">
+				<!-- {% with background_class = gray, text_class = white %} -->
+				<!-- {% include 'verticalNavbar.html' %} -->
+				<!-- {% endwith %} -->
+				<!-- Insert a nav bar -->
+				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/vertical_nav.css">
+
+				<nav id="movingNav">
+					<ul class="vertical_nav_list gray">
+						<!-- Note that this is hidden by the javascript at the start.
+							the movingNav box is the only one that is always visible
+
+							These have the same IDs in addition to their other IDs
+							to allow their movement to be controlled by the navigation_handler.js-->
+							<li><a href="" class="white medium_buttonLink vertical_nav_item homeLink">home</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item projectsLink">projects</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item runningLink">running</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item aboutLink">me</a></li>
+					</ul>
+				</nav>
+
+				<!-- {% include 'projects.html' %} -->
+				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/projects_section.css">
+
+				<div id="publications_div">
+					<p class="xlarge_text underline">Publications:</p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Sam Ainsworth, Michael F.P. O'Boyle, Bind the Gap: Compiling Real Software to Hardware FFT Accelerators, PLDI 2022 <a href="pdfs/pldi2022.pdf">Preprint</a> <a href="https://github.com/FourierACceleratorCompiler/FACC">Code</a></p>
+					<p class="large_text">Noa Zilberman, Andrew W Moore, Billy Cooper, <u>Jackson Woodruff</u>, Yuta Tokusashi, Pietro Bressana, Murali Ramanujam, Salvator Galea, NRG: A Netwrok Perspective on Applicatoins' Performance, TMA 2021 <a href="https://eng.ox.ac.uk/media/9964/zilberman21nrg.pdf">PDF</a></p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Michael F. P. O'Boyle, New Regular Expressions on Old Accelerators, 58th Design Automation Conference, 2021.  <a href="pdfs/DAC_2021_Paper.pdf">Preprint</a> <a href="https://github.com/j-c-w/RXPSC">Code</a></p>
+					<p class="large_text">Bruce Collie, Philip Ginsbach, <u>Jackson Woodruff</u>, Ajitha Rajan, Michael F. P. O'Boyle, M3: Semantic API Migrations, International Conference on Automated Software Engineering, 2020. <a href="https://baltoli.github.io/static/ase.pdf">PDF</a></p>
+					<p class="large_text">Bruce Collie, <u>Jackson Woodruff</u>, Michael F.P. O'Boyle, Modeling black-box components with probabilistic synthesis, International Conference on Generative Programming: Concepts and Experiences, 2020. <a href="https://arxiv.org/abs/2010.04811">PDF</a> <a href="https://github.com/mob-group/synthesis-eval">Evaluation Code</a></br>
+					Winner of GPCE Best Paper Award</p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Andrew W Moore, Noa Zilberman, Measuring Burstiness in Data Center Applications, Buffers Workshop 2019. <a href="https://www.cl.cam.ac.uk/~nz247/publications/woodruff2019measuring.pdf">PDF</a></p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Murali Ramanumjam, Noa Zilberman, P4DNS: In-Network DNS, EuroP4 2019.  <a href="pdfs/woodruff2019p4dns.pdf">PDF</a> <a href="https://github.com/cucl-srg/P4DNS">Code</a> <a href="https://www.youtube.com/watch?v=m-dPfx9j9Tw&ab_channel=JacksonWoodruff">Video</a>
+					<br/>
+					(Also presented at ICIN 2020 and IETF Meeting 107 to the COIN sub-group)<br/>
+					Winner of the <a href="http://www.openhw.eu/2020-results.html">Xilinx Open Hardware Award 2020</a></p>
+
+					<p class="xlarge_text underline">Theses:</p>
+					<p class="large_text">Jackson Woodruff, Analyzing data center applications using high precision packet traces, Master's Dissertation, 2019. <a href="http://jacksonwoodruff.com/static/pdfs/net_measurements_diss.pdf">PDF</a></p>
+
+					<p class="large_text">Jackson Woodruff, An Optimizing Compiler for ML, Undergraduate Dissertation, 2018.  <a href="pdfs/mlc_diss.pdf">PDF</a> <a href="https://github.com/j-c-w/mlc">Code</a></p>
+
+					<p class="xlarge_text underline">Other:</p>
+					<p class="large_text">Jackson Woodruff, Compiler Support for Hardware Accelerators, Arm Virtual Conference, 2021</p>
+					<p class="large_text">Murali Ramanujam, Jackson Woodruff, Andrew W Moore and Noa Zilberman, "Reproducible Cloud Measurements", poster, Google Networking Research Summit, March 2019.</p>
+
+					<p class="large_text">Jackson Woodruff, How to give a talk: annotated bibliography, unpublished 2019.  <a href="pdfs/how_to_give_a_talk.pdf">PDF</a></p>
+
+					<p class="large_text">Jackson Woodruff, How to give a talk (Talk at the Churchill CompSci Talk Series, 2019 <a href="{{links.jackson_talk()}}">Recording (Youtube)</a>)</p>
+
+				</div>
+
+				<div id="projectsPopupHolder">
+					<div id="cmlcLogoContainer" class="logoContainer">
+						<div class="projectExpansion big_rounded_corners" id="cmlcProjectAbove">
+							<h2>P4DNS</h2>
+						</div>
+						<div class="circular projectsPopupButton" onclick="window.open('{{links.p4dns()}}', '_blank')" id="p4Logo"></div>
+						<div class="projectExpansion big_rounded_corners" id="cmlcProjectBelow">
+							<div class="projectTextContainer">
+
+								P4DNS is a DNS server written in P4.  It is designed to integrate into reprogrammable switches in data center racks and accelerate DNS requests.  We found throughput improvements of more than 50x and latency improvments of 100x over traditional software solutions.
+
+							</div>
+						</div>
+					</div>
+					<div id="gccLogoContainer" class="logoContainer">
+						<div class="projectExpansion big_rounded_corners" id="gccProjectAbove">
+							<h2>GCC</h2>
+						</div>
+						<div class="circular projectsPopupButton"
+							 onclick="window.open('{{links.gcc()}}', '_blank')" id="gccLogo"></div>
+						<div class="projectExpansion big_rounded_corners" id="gccProjectBelow">
+							<div class="projectTextContainer">
+								GCC is the largest open source compiler toolchain.  My  work focused on
+								backend optimizations for Arm architecture targets.
+							</div>
+						</div>
+					</div>
+
+					<div style="clear:both;"></div>
+				</div>
+				<!-- When you add more, the idea is to have another popup holder here
+					so that we have somehting like:
+
+					O           O
+					O
+
+					For a 4th, I suggest:
+
+					O
+					O           O
+					O
+				-->
+			</section>
+
+			<section id="runningSection" class="pageSection">
+				<!-- {% with background_class = green, text_class = white %} -->
+				<!-- {% include 'verticalNavbar.html' %} -->
+				<!-- {% endwith %} -->
+				<!-- Insert a nav bar -->
+				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/vertical_nav.css">
+
+				<nav id="movingNav">
+					<ul class="vertical_nav_list green">
+						<!-- Note that this is hidden by the javascript at the start.
+							the movingNav box is the only one that is always visible
+
+							These have the same IDs in addition to their other IDs
+							to allow their movement to be controlled by the navigation_handler.js-->
+							<li><a href="" class="white medium_buttonLink vertical_nav_item homeLink">home</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item projectsLink">projects</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item runningLink">running</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item aboutLink">me</a></li>
+					</ul>
+				</nav>
+
+				<!-- {% include 'running.html' %} -->
+				<div id="runningMain">
+					<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/running.css">
+
+					<div id="rightFloatingImage">
+						<img class="runningPictures small_rounded_corners" src="images/MeInPain.jpg"/>
+					</div>
+
+					<div id="times">
+						<h4>PBs: </h4>
+						<table id="resultsTable">
+							<tr>
+								<td>Distance</td>
+								<td>Time</td>
+								<td>Event</td>
+							</tr>
+							<tr>
+								<td>5k</td>
+								<td>17:53</td>
+								<td>Crammond Parkrun</td>
+							</tr>
+							<tr>
+								<td>10k</td>
+								<td>36:49</td>
+								<td>Two Castles 10k</td>
+							</tr>
+							<tr>
+								<td>Half Marathon</td>
+								<td>79:00</td>
+								<td>Bath Half</td>
+							</tr>
+						</table>
+						<section id="running_overlay">
+							{% with title = "check out my running on:", idPrefix = "running", items = running_overlays %}
+							{% include 'fadeList/overlay.html' %}
+							{% endwith %}
+						</section>
+					</div>
+				</div>
+			</section>
+
+			<section id="aboutSection" class="pageSection">
+				<!-- {% with background_class = gray, text_class = white %} -->
+				<!-- {% include 'verticalNavbar.html' %} -->
+				<!-- {% endwith %} -->
+				<nav id="movingNav">
+					<ul class="vertical_nav_list gray">
+						<!-- Note that this is hidden by the javascript at the start.
+							the movingNav box is the only one that is always visible
+
+							These have the same IDs in addition to their other IDs
+							to allow their movement to be controlled by the navigation_handler.js-->
+							<li><a href="" class="white medium_buttonLink vertical_nav_item homeLink">home</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item projectsLink">projects</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item runningLink">running</a></li>
+							<li><a href="" class="white medium_buttonLink vertical_nav_item aboutLink">me</a></li>
+					</ul>
+				</nav>
+
+				<!-- {% include 'about.html' %} -->
+				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/about.css">
+
+				<div id="aboutMe">
+					<h2>I'm Jackson Woodruff</h2>
+					<p id="large_text">I'm a PhD student at the University of Edinburgh working on compiling for hardware accelerators.</p>
+					<div id="aboutSplitContainer">
+						<div id="leftHandAbout">
+							<img class="big_rounded_corners" src="images/me1.jpg"/>
+						</div>
+
+						<div id="rightHandAbout">
+							<p class="xlarge_text underline">Experience:</p>
+							<ul class=large_text">
+								<li>University of Cambridge, BA and MEng, 2015-2019</li>
+								<li>University of Edinburgh, PhD, 2019-</li>
+								<li>Meta AI, FAIR Labs Intern, 2022</li>
+								<li>Arm Intern, 2017 and 2018</li>
+								<!-- <li><a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a> Shadow PC</li> -->
+							</ul>
+
+							<p class="xlarge_text underline">Awards:</p>
+							<ul class="large_text">
+								<li>Best Paper Award, GPCE 2020</li>
+								<li>Distinguished Talk Award, Churchill College Computer Science Talks Series, 2017 and 2018 </li>
+								<li>Magdalene College Prize for Computer Science, 2016, 2018, 2019</li>
+								<li>Magdalene College Academic Scholarship, 2016-2017, 2018-2019, 2019-2020</li>
+								<li>Top 50 A-Level Computer Science Student in the UK, 2015 </li>
+							</ul>
+						</div>
+					</div>
+
+					<div id="bottomQuote">
+					</div>
+				</div>
+			</section>
+		</main>
+	</body>
+</html>
