Fix some odds and ends

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/vertical_nav.css">
 
 				<nav id="movingNav">
-					<ul class="vertical_nav_list gray">
+					<ul class="vertical_nav_list gray_background">
 						<!-- Note that this is hidden by the javascript at the start.
 							the movingNav box is the only one that is always visible
 
@@ -87,37 +87,37 @@
 
 					<p class="large_text">Jackson Woodruff, How to give a talk: annotated bibliography, unpublished 2019.  <a href="pdfs/how_to_give_a_talk.pdf">PDF</a></p>
 
-					<p class="large_text">Jackson Woodruff, How to give a talk (Talk at the Churchill CompSci Talk Series, 2019 <a href="{{links.jackson_talk()}}">Recording (Youtube)</a>)</p>
+					<p class="large_text">Jackson Woodruff, How to give a talk (Talk at the Churchill CompSci Talk Series, 2019 <a href="https://www.youtube.com/watch?v=GfFtgypAjxM">Recording (Youtube)</a>)</p>
 
 				</div>
 
-				<div id="projectsPopupHolder">
-					<div id="cmlcLogoContainer" class="logoContainer">
-						<div class="projectExpansion big_rounded_corners" id="cmlcProjectAbove">
-							<h2>P4DNS</h2>
-						</div>
-						<div class="circular projectsPopupButton" onclick="window.open('{{links.p4dns()}}', '_blank')" id="p4Logo"></div>
-						<div class="projectExpansion big_rounded_corners" id="cmlcProjectBelow">
-							<div class="projectTextContainer">
+<!-- 				<div id="projectsPopupHolder"> -->
+<!-- 					<div id="cmlcLogoContainer" class="logoContainer"> -->
+<!-- 						<div class="projectExpansion big_rounded_corners" id="cmlcProjectAbove"> -->
+<!-- 							<h2>P4DNS</h2> -->
+<!-- 						</div> -->
+<!-- 						<div class="circular projectsPopupButton" onclick="window.open('https://github.com/cucl-srg/P4DNS', '_blank')" id="p4Logo"></div> -->
+<!-- 						<div class="projectExpansion big_rounded_corners" id="cmlcProjectBelow"> -->
+<!-- 							<div class="projectTextContainer"> -->
 
-								P4DNS is a DNS server written in P4.  It is designed to integrate into reprogrammable switches in data center racks and accelerate DNS requests.  We found throughput improvements of more than 50x and latency improvments of 100x over traditional software solutions.
+<!-- 								P4DNS is a DNS server written in P4.  It is designed to integrate into reprogrammable switches in data center racks and accelerate DNS requests.  We found throughput improvements of more than 50x and latency improvments of 100x over traditional software solutions. -->
 
-							</div>
-						</div>
-					</div>
-					<div id="gccLogoContainer" class="logoContainer">
-						<div class="projectExpansion big_rounded_corners" id="gccProjectAbove">
-							<h2>GCC</h2>
-						</div>
-						<div class="circular projectsPopupButton"
-							 onclick="window.open('{{links.gcc()}}', '_blank')" id="gccLogo"></div>
-						<div class="projectExpansion big_rounded_corners" id="gccProjectBelow">
-							<div class="projectTextContainer">
-								GCC is the largest open source compiler toolchain.  My  work focused on
-								backend optimizations for Arm architecture targets.
-							</div>
-						</div>
-					</div>
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 					<div id="gccLogoContainer" class="logoContainer"> -->
+<!-- 						<div class="projectExpansion big_rounded_corners" id="gccProjectAbove"> -->
+<!-- 							<h2>GCC</h2> -->
+<!-- 						</div> -->
+<!-- 						<div class="circular projectsPopupButton" -->
+<!-- 							 onclick="window.open('{{links.gcc()}}', '_blank')" id="gccLogo"></div> -->
+<!-- 						<div class="projectExpansion big_rounded_corners" id="gccProjectBelow"> -->
+<!-- 							<div class="projectTextContainer"> -->
+<!-- 								GCC is the largest open source compiler toolchain.  My  work focused on -->
+<!-- 								backend optimizations for Arm architecture targets. -->
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 
 					<div style="clear:both;"></div>
 				</div>
@@ -143,7 +143,7 @@
 				<link property="stylesheet" type="text/css" rel="stylesheet" href="stylesheets/vertical_nav.css">
 
 				<nav id="movingNav">
-					<ul class="vertical_nav_list green">
+					<ul class="vertical_nav_list green_background">
 						<!-- Note that this is hidden by the javascript at the start.
 							the movingNav box is the only one that is always visible
 
@@ -202,7 +202,7 @@
 				<!-- {% include 'verticalNavbar.html' %} -->
 				<!-- {% endwith %} -->
 				<nav id="movingNav">
-					<ul class="vertical_nav_list gray">
+					<ul class="vertical_nav_list gray_background">
 						<!-- Note that this is hidden by the javascript at the start.
 							the movingNav box is the only one that is always visible
 
