--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
 
 							<p class="xlarge_text underline">Awards:</p>
 							<ul class="large_text">
+									      <li>Xilinx Open Hardware Award, 2020</li>
 								<li>Best Paper Award, GPCE 2020</li>
 								<li>Distinguished Talk Award, Churchill College Computer Science Talks Series, 2017 and 2018 </li>
 								<li>Magdalene College Prize for Computer Science, 2016, 2018, 2019</li>
