--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 
 <div id="publications_div">
 <p class="xlarge_text underline">Publications:</p>
+<p class="large_text">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Michael F.P. O'Boyle, Matching linear algebra and tensor code to specialized hardware accelerators, CC 2023 (Preprint to appear)</p>
 <p class="large_text"><u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Sam Ainsworth, Michael F.P. O'Boyle, Bind the Gap: Compiling Real Software to Hardware FFT Accelerators, PLDI 2022 <a href="{{url_for('static', filename='pdfs/pldi2022.pdf')}}">Preprint</a> <a href="https://github.com/FourierACceleratorCompiler/FACC">Code</a></p>
 <p class="large_text">Noa Zilberman, Andrew W Moore, Billy Cooper, <u>Jackson Woodruff</u>, Yuta Tokusashi, Pietro Bressana, Murali Ramanujam, Salvator Galea, NRG: A Netwrok Perspective on Applicatoins' Performance, TMA 2021 <a href="https://eng.ox.ac.uk/media/9964/zilberman21nrg.pdf">PDF</a></p>
 <p class="large_text"><u>Jackson Woodruff</u>, Michael F. P. O'Boyle, New Regular Expressions on Old Accelerators, 58th Design Automation Conference, 2021.  <a href="{{url_for('static', filename='pdfs/DAC_2021_Paper.pdf')}}">Preprint</a> <a href="https://github.com/j-c-w/RXPSC">Code</a></p>
