--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 				<div id="publications_div">
 					<p class="xlarge_text underline">Publications:</p>
+					<p class="large_text">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Michael F.P. O'Boyle, Matching linear algebra and tensor code to specialized hardware accelerators, CC 2023 (Preprint to appear)</p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Sam Ainsworth, Michael F.P. O'Boyle, Bind the Gap: Compiling Real Software to Hardware FFT Accelerators, PLDI 2022 <a href="pdfs/pldi2022.pdf">Preprint</a> <a href="https://github.com/FourierACceleratorCompiler/FACC">Code</a> <a href="https://www.youtube.com/watch?v=yIOOX4whEd8&list=PLyrlk8Xaylp4aGsN5wVcECG736A2JeMon&index=10&ab_channel=ACMSIGPLAN">Talk</a> </p>
 					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Alexander Bruachkmann, José Wesley de Souze Magalhães, Michael F. P. O'Boyle, ExeBench: an ML-scale dataset of executable C functions, MAPS@PLDI 2022 <a href="https://dl.acm.org/doi/abs/10.1145/3520312.3534867">Paper</a> </p>
 					<p class="large_text">Noa Zilberman, Andrew W Moore, Billy Cooper, <u>Jackson Woodruff</u>, Yuta Tokusashi, Pietro Bressana, Murali Ramanujam, Salvator Galea, NRG: A Netwrok Perspective on Applicatoins' Performance, TMA 2021 <a href="https://eng.ox.ac.uk/media/9964/zilberman21nrg.pdf">PDF</a></p>
