--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 				<div id="publications_div">
 					<p class="xlarge_text underline">Publications:</p>
+					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle, SLaDe: A Portable Small Language Model Decompiler for Optimized Assemnbler, arxiv preprint (2023) <a href="https://arxiv.org/pdf/2305.12520.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff, When does saving power save the planet?, HotCarbon 2023 <a href="pdfs/hotcarbon23.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Chris Cummins, Designing CGRAs with Deep Reinforcement Learning, DOSSA 2023 <a href="pdfs/dossa23.pdf">Paper</a> <a href="https://github.com/j-c-w/RL_streaming_engine">Code</a></p>
 					<p class="large_text">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Gregorio Bernabé, José Manuel García, Michael F.P. O'Boyle, Matching linear algebra and tensor code to specialized hardware accelerators, CC 2023 <a href="https://arxiv.org/abs/2301.11659">Preprint</a></p>
