--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@
 					Winner of the <a href="http://www.openhw.eu/2020-results.html">Xilinx Open Hardware Award 2020</a></p>
 
 					<p class="xlarge_text underline">Theses:</p>
+					<p class="large_text">Jackson Woodruff, Acceleration for the many, not the few, PhD Thesis, 2023 (To Appear)</p>
 					<p class="large_text">Jackson Woodruff, Analyzing data center applications using high precision packet traces, Master's Dissertation, 2019. <a href="http://jacksonwoodruff.com/static/pdfs/net_measurements_diss.pdf">PDF</a></p>
 
 					<p class="large_text">Jackson Woodruff, An Optimizing Compiler for ML, Undergraduate Dissertation, 2018.  <a href="pdfs/mlc_diss.pdf">PDF</a> <a href="https://github.com/j-c-w/mlc">Code</a></p>
 
 					<p class="xlarge_text underline">Other:</p>
+					<p class="large_text">Jackson Woodruff, Michael F.P. O'Boyle, Rewriting in Modern Compilers, HiPEAC ACASES Summer School, 2023</p>
 					<p class="large_text">Jackson Woodruff, Compiler Support for Hardware Accelerators, Arm Virtual Conference, 2021</p>
 					<p class="large_text">Murali Ramanujam, Jackson Woodruff, Andrew W Moore and Noa Zilberman, "Reproducible Cloud Measurements", poster, Google Networking Research Summit, March 2019.</p>
 
@@ -237,6 +239,7 @@
 								<li>University of Cambridge, BA and MEng, 2015-2019</li>
 								<li>University of Edinburgh, PhD + Postdoc, 2019-</li>
 								<li>Meta AI, FAIR Labs Intern, 2022</li>
+								<li>MIT, Postdoc, 2023</li>
 								<li>Arm Intern, 2017 and 2018</li>
 								<!-- <li><a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a> Shadow PC</li> -->
 							</ul>
