--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 				<div id="publications_div">
 					<p class="xlarge_text underline">Publications:</p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle, Secco: Codesign for Resource Sharing in Regular Expression Accelerators, ASP-DAC 2024</p>
 					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle, SLaDe: A Portable Small Language Model Decompiler for Optimized Assemnbler, CGO 2024 <a href="https://arxiv.org/pdf/2305.12520.pdf">Paper</a></p>
 					<p class="large_text">José Wesley de Souze Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle, C2TACO: Lifting Tensor Code to TACO, GPCE 2023</p>
 					<p class="large_text"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff, When does saving power save the planet?, HotCarbon 2023 <a href="pdfs/hotcarbon23.pdf">Paper</a></p>
