--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 				<div id="publications_div">
 					<p class="xlarge_text underline">Publications:</p>
-					<p class="large_text"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle, Secco: Codesign for Resource Sharing in Regular Expression Accelerators, ASP-DAC 2024 <a href="pdfs/aspdac24.pdf">PDF</a> <a href="https://github.com/j-c-w/APsim">Code</a></p>
+					<p class="large_text"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle, Secco: Codesign for Resource Sharing in Regular Expression Accelerators, ASP-DAC 2024 <a href="pdfs/woodruff_aspdac_24.pdf">PDF</a> <a href="https://github.com/j-c-w/APsim">Code</a></p>
 					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle, SLaDe: A Portable Small Language Model Decompiler for Optimized Assemnbler, CGO 2024 <a href="https://arxiv.org/pdf/2305.12520.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Thomas Koehler, Alexander Brauckmann, Chris Cummins, Sam Ainsworth, Michael F.P. O'Boyle, Rewriting History: Repurposing Domain-Specific CGRAs, Arxiv <a href="https://arxiv.org/pdf/2309.09112.pdf">PDF</a> <a href="https://github.com/j-c-w/CGRA-Mapper">Code</a></p>
-					<p class="large_text">José Wesley de Souze Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle, C2TACO: Lifting Tensor Code to TACO, GPCE 2023 <a href="https://josewesley.com/archive/c2taco.pdf">Paper</a></p>
+					<p class="large_text">José Wesley de Souze Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle, C2TACO: Lifting Tensor Code to TACO, GPCE 2023 <a href="https://josewesley.com/archive/c2taco.pdf">Paper</a> <a href="https://github.com/JWesleySM/c2taco">Code</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff, When does saving power save the planet?, HotCarbon 2023 <a href="pdfs/hotcarbon23.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Chris Cummins, Designing CGRAs with Deep Reinforcement Learning, DoSSA 2023 <a href="pdfs/dossa23.pdf">Paper</a> <a href="https://github.com/j-c-w/RL_streaming_engine">Code</a></p>
 					<p class="large_text">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Gregorio Bernabé, José Manuel García, Michael F.P. O'Boyle, Matching linear algebra and tensor code to specialized hardware accelerators, CC 2023 <a href="https://arxiv.org/abs/2301.11659">Preprint</a></p>
