--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 				<div id="aboutMe">
 					<h2>I'm Jackson Woodruff</h2>
 					<p id="large_text">I'm a PhD student at the University of Edinburgh working on compiling for hardware accelerators.</p>
+					<p id="large_text">J.C.Woodruff [at] sms.ed.ac.uk        <a href="pdfs/CV.pdf">CV</a></p>
 					<div id="aboutSplitContainer">
 						<div id="leftHandAbout">
 							<img class="big_rounded_corners" src="images/me1.jpg"/>
@@ -249,6 +250,7 @@
 
 							<p class="xlarge_text underline">Awards:</p>
 							<ul class="large_text">
+								<li>Best Paper Award, GPCE 2023</li>
 									      <li>Xilinx Open Hardware Award, 2020</li>
 								<li>Best Paper Award, GPCE 2020</li>
 								<li>Distinguished Talk Award, Churchill College Computer Science Talks Series, 2017 and 2018 </li>
