--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 					</ul>
 				</nav>
 
-				<p class="large_text white">Under Construction :)</p>
+				<div id="groupDiv">
+					<p class="large_text white center">Under Construction :)</p>
+					<img width="95%" class="big_rounded_corners" src="images/ponyhenge.jpg" class="center"/>
+				</div>
 			</section>
 
 				<!-- {% include 'running.html' %} -->
@@ -132,7 +135,7 @@
 					<p class="large_text"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle, Secco: Codesign for Resource Sharing in Regular Expression Accelerators, ASP-DAC 2024 <a href="pdfs/woodruff_aspdac_24.pdf">PDF</a> <a href="https://github.com/j-c-w/APsim">Code</a></p>
 					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle, SLaDe: A Portable Small Language Model Decompiler for Optimized Assemnbler, CGO 2024 <a href="https://arxiv.org/pdf/2305.12520.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Thomas Koehler, Alexander Brauckmann, Chris Cummins, Sam Ainsworth, Michael F.P. O'Boyle, Rewriting History: Repurposing Domain-Specific CGRAs, Arxiv <a href="https://arxiv.org/pdf/2309.09112.pdf">PDF</a> <a href="https://github.com/j-c-w/CGRA-Mapper">Code</a></p>
-					<p class="large_text">José Wesley de Souze Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle, C2TACO: Lifting Tensor Code to TACO, GPCE 2023 <a href="https://josewesley.com/archive/c2taco.pdf">Paper</a> <a href="https://github.com/JWesleySM/c2taco">Code</a></p> <p>Winner of GPCE Best Paper Award</p>
+					<p class="large_text">José Wesley de Souza Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle, C2TACO: Lifting Tensor Code to TACO, GPCE 2023 <a href="https://josewesley.com/archive/c2taco.pdf">Paper</a> <a href="https://github.com/JWesleySM/c2taco">Code</a></p> <p>Winner of GPCE Best Paper Award</p>
 					<p class="large_text"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff, When does saving power save the planet?, HotCarbon 2023 <a href="pdfs/hotcarbon23.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Chris Cummins, Designing CGRAs with Deep Reinforcement Learning, DoSSA 2023 <a href="pdfs/dossa23.pdf">Paper</a> <a href="https://github.com/j-c-w/RL_streaming_engine">Code</a></p>
 					<p class="large_text">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Gregorio Bernabé, José Manuel García, Michael F.P. O'Boyle, Matching linear algebra and tensor code to specialized hardware accelerators, CC 2023 <a href="https://arxiv.org/abs/2301.11659">Preprint</a></p>
@@ -150,7 +153,7 @@
 					Winner of the <a href="http://www.openhw.eu/2020-results.html">Xilinx Open Hardware Award 2020</a></p>
 
 					<p class="xlarge_text underline">Theses:</p>
-					<p class="large_text">Jackson Woodruff, Acceleration for the many, not the few, PhD Thesis, 2023 (To Appear)</p>
+					<p class="large_text">Jackson Woodruff, Acceleration for the many, not the few, PhD Thesis, 2024 (To Appear)</p>
 					<p class="large_text">Jackson Woodruff, Analyzing data center applications using high precision packet traces, Master's Dissertation, 2019. <a href="http://jacksonwoodruff.com/static/pdfs/net_measurements_diss.pdf">PDF</a></p>
 
 					<p class="large_text">Jackson Woodruff, An Optimizing Compiler for ML, Undergraduate Dissertation, 2018.  <a href="pdfs/mlc_diss.pdf">PDF</a> <a href="https://github.com/j-c-w/mlc">Code</a></p>
@@ -250,7 +253,7 @@
 					<p id="large_text">J.C.Woodruff [at] sms.ed.ac.uk        <a href="pdfs/CV.pdf">CV</a></p>
 					<div id="aboutSplitContainer">
 						<div id="leftHandAbout">
-							<img class="big_rounded_corners" src="images/me1.jpg"/>
+							<img width="95%" class="big_rounded_corners" src="images/me1.jpg"/>
 						</div>
 
 						<div id="rightHandAbout">
