--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 				</nav>
 
 				<div id="groupDiv">
-					<p class="large_text white center">Under Construction :)</p>
+					<p class="large_text white center">Under Construction :) (in the meantime, enjoy ponyhenge)</p>
 					<img width="95%" class="big_rounded_corners" src="images/ponyhenge.jpg" class="center"/>
+					<p class="large_text white center">Interested in working with me? Great!  See the "me" section for more details</p>
 				</div>
 			</section>
 
