--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				</nav>
 
 				<div id="groupDiv">
+					<h2 class="xlarge_text white underline">Group</h2>
 					<p class="large_text white center">Under Construction :) (in the meantime, enjoy ponyhenge)</p>
 					<img width="95%" class="big_rounded_corners" src="images/ponyhenge.jpg" class="center"/>
 					<p class="large_text white center">Interested in working with me? Great!  See the "me" section for more details</p>
