--- a/index.html
+++ b/index.html
@@ -289,4 +289,5 @@
 			</section>
 		</main>
 	</body>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a74bc58141aa431e9671bd4f4220b748"}'></script><!-- End Cloudflare Web Analytics -->
 </html>
