--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
 
 				<div id="groupDiv">
 					<h2 class="xlarge_text white underline">Group</h2>
+					<p class="large_text white center">Current Members:</p>
+					<ul class="large_text white center">
+						<li><a href="https://antonlydike.de/">Anton Lydike</a>: Making accelerators more flexible</li>
+					</ul>
+					<!--
 					<p class="large_text white center">Under Construction :) (in the meantime, enjoy ponyhenge)</p>
 					<img width="95%" class="big_rounded_corners" src="images/ponyhenge.jpg" class="center"/>
 					<p class="large_text white center">Interested in working with me? Great!  See the "me" section for more details</p>
+					-->
 				</div>
 			</section>
 
@@ -134,6 +140,7 @@
 
 				<div id="publications_div">
 					<p class="xlarge_text underline">Publications:</p>
+					<p class="large_text">Jordi Armengol-Estapé, Rodrigo R.O. Rocha, <u>Jackson Woodruff</u>, Psquale Minervini, Michael F.P. O'Boyle, Forklift: An Extensible Neural Lifter, COLM 2024 <a href="https://arxiv.org/pdf/2404.16041">PDF</a></p> 
 					<p class="large_text"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle, Secco: Codesign for Resource Sharing in Regular Expression Accelerators, ASP-DAC 2024 <a href="pdfs/woodruff_aspdac_24.pdf">PDF</a> <a href="https://github.com/j-c-w/APsim">Code</a></p>
 					<p class="large_text">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle, SLaDe: A Portable Small Language Model Decompiler for Optimized Assemnbler, CGO 2024 <a href="https://arxiv.org/pdf/2305.12520.pdf">Paper</a></p>
 					<p class="large_text"><u>Jackson Woodruff</u>, Thomas Koehler, Alexander Brauckmann, Chris Cummins, Sam Ainsworth, Michael F.P. O'Boyle, Rewriting History: Repurposing Domain-Specific CGRAs, Arxiv <a href="https://arxiv.org/pdf/2309.09112.pdf">PDF</a> <a href="https://github.com/j-c-w/CGRA-Mapper">Code</a></p>
@@ -155,7 +162,7 @@
 					Winner of the <a href="http://www.openhw.eu/2020-results.html">Xilinx Open Hardware Award 2020</a></p>
 
 					<p class="xlarge_text underline">Theses:</p>
-					<p class="large_text">Jackson Woodruff, Acceleration for the many, not the few, PhD Thesis, 2024 (To Appear)</p>
+					<p class="large_text">Jackson Woodruff, Acceleration for the many, not the few, PhD Thesis, 2024 <a href="pdfs/acceleration.pdf">PDF</a></p>
 					<p class="large_text">Jackson Woodruff, Analyzing data center applications using high precision packet traces, Master's Dissertation, 2019. <a href="http://jacksonwoodruff.com/static/pdfs/net_measurements_diss.pdf">PDF</a></p>
 
 					<p class="large_text">Jackson Woodruff, An Optimizing Compiler for ML, Undergraduate Dissertation, 2018.  <a href="pdfs/mlc_diss.pdf">PDF</a> <a href="https://github.com/j-c-w/mlc">Code</a></p>
