--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 					<ul class="large_text white center">
 						<li><a href="https://antonlydike.de/">Anton Lydike</a>: Making accelerators more flexible</li>
 					</ul>
+					<p class="large_text white center">We're still growing :)  See below for our current research and general topic ideas, and if interested in a PhD in compilers drop me an email.</p>
 					<!--
 					<p class="large_text white center">Under Construction :) (in the meantime, enjoy ponyhenge)</p>
 					<img width="95%" class="big_rounded_corners" src="images/ponyhenge.jpg" class="center"/>
