try to fix lings

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Woodruf | Compilers, Synthesis, Accelerators | Edinburgh</title>
-    <link rel="stylesheet" href="/static/style.css">
-<script src="/static/main.js"></script>
+    <link rel="stylesheet" href="static/style.css">
+<script src="static/main.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -95,7 +95,7 @@
 <iframe id="map-canvas" class="map_part" width="100%"  height="450"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=Informatics Forum, Edinburgh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></main>
     <footer>
         <span class="copyright-notice">&copy; 2024 - Jackson Woodruff</span>
-        <span class="meta-info">Last updated 2024-28-10 15:29</span>
+        <span class="meta-info">Last updated 2024-28-10 16:02</span>
     </footer>
 </body>
 </html>
