Update research blurb

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 </div>
 
 <h1>Research</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
+<p>My research sets out to make fast hardware easy to use.
+We design compilers, software engineering tools and
+hardware design tools to make this easier.</p>
+<p>The key questions I set out to answer are:</p>
 <ul>
 <li>How do we make hardware accelerators easy to use?</li>
 <li>How can we improve existing programming models (in particular, APIs and DSLs)?</li>
@@ -90,12 +92,12 @@
 
 </p>
 <h1>Getting In Touch</h1>
-<p>We are located bla bla bla</p>
-<p>You can contact me bla bla bla</p>
+<p>We are based at the University of Edinburgh, in Scotland.</p>
+<p>You can contact me at Jackson [dot] Woodruff [at] ed.ac.uk</p>
 <iframe id="map-canvas" class="map_part" width="100%"  height="450"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=Informatics Forum, Edinburgh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></main>
     <footer>
         <span class="copyright-notice">&copy; 2024 - Jackson Woodruff</span>
-        <span class="meta-info">Last updated 2024-28-10 16:02</span>
+        <span class="meta-info">Last updated 2024-28-10 16:07</span>
     </footer>
 </body>
 </html>
