--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@ hardware design tools to make this easier.</p>
                 <div class="member-topic">Making accelerators more flexible</div>
             </div>
         </div>
+<div class="member-item">
+            <div class="member-photo"><img src="static/members/eymen.jpg"/></div>
+            <div class="member-info">
+                <div class="member-name">Eymen Ünay</div>
+                <div class="member-topic">Making accelerators more performant</div>
+            </div>
+        </div>
 </div>
 </p>
 <h1>Publications</h1>
@@ -60,6 +67,7 @@ hardware design tools to make this easier.</p>
 <li class="paper-item"><div class="paper-title">Forklift: An Extensible Neural Lifter<span class="paper-venue">COLM</span></div> <div class="paper-authors">Jordi Armengol-Estapé, Rodrigo R.O. Rocha, <u>Jackson Woodruff</u>, Psquale Minervini, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/pdf/2404.16041" target="_blank">PDF</a></li>
 <li class="paper-item"><div class="paper-title">Secco: Codesign for Resource Sharing in Regular Expression Accelerators<span class="paper-venue">ASP-DAC</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/woodruff_aspdac_24.pdf" target="_blank">PDF</a>, <a href="https://github.com/j-c-w/APsim" target="_blank">Code</a></li>
 <li class="paper-item"><div class="paper-title">SLaDe: A Portable Small Language Model Decompiler for Optimized Assembler<span class="paper-venue">CGO</span></div> <div class="paper-authors">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/pdf/2305.12520.pdf" target="_blank">Paper</a></li>
+<li class="paper-item"><div class="paper-title">Acceleration for the many, not the few<span class="paper-venue">PhD Thesis, University of Edinburgh</span></div> <div class="paper-authors"><u>Jackson Woodruff</u></div> <div></div><a href="https://jacksonwoodruff.com/pdfs/AFTMNTF.pdf" target="_blank">PDF</a></li>
 </ul>
 <h2>2023</h2>
 <ul>
@@ -96,8 +104,8 @@ hardware design tools to make this easier.</p>
 <p>You can contact me at Jackson [dot] Woodruff [at] ed.ac.uk</p>
 <iframe id="map-canvas" class="map_part" width="100%"  height="450"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=Informatics Forum, Edinburgh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></main>
     <footer>
-        <span class="copyright-notice">&copy; 2024 - Jackson Woodruff</span>
-        <span class="meta-info">Last updated 2024-28-10 16:07</span>
+        <span class="copyright-notice">&copy; 2025 - Jackson Woodruff</span>
+        <span class="meta-info">Last updated 2025-17-04 10:44</span>
     </footer>
 </body>
 </html>
